[gd_scene load_steps=8 format=3 uid="uid://b6x6xfqsnexa4"]

[ext_resource type="Script" path="res://player/pix/player.gd" id="1_gtfes"]
[ext_resource type="Script" path="res://player/camera/spring_arm.gd" id="2_80x0t"]
[ext_resource type="PackedScene" uid="uid://ci2iyjdfwcvsr" path="res://player/camera/ui/ui.tscn" id="3_ehl54"]
[ext_resource type="PackedScene" uid="uid://dk8ls2ted1g30" path="res://player/pix/model/pix_model.tscn" id="4_oyx1d"]
[ext_resource type="PackedScene" path="res://player/pix/ring.tscn" id="5_vfj7s"]

[sub_resource type="CylinderShape3D" id="3"]
height = 1.15
radius = 0.3

[sub_resource type="CylinderShape3D" id="1"]
height = 0.75
radius = 0.15

[node name="Bit" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 33
slide_on_ceiling = false
script = ExtResource("1_gtfes")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("3")

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
top_level = true
spring_length = 4.0
margin = 0.2
script = ExtResource("2_80x0t")

[node name="CameraHolder" type="Node3D" parent="SpringArm3D"]

[node name="Camera3D" type="Camera3D" parent="SpringArm3D/CameraHolder"]
top_level = true
current = true
near = 0.01
far = 1000.0

[node name="CenterContainer" parent="SpringArm3D/CameraHolder/Camera3D" instance=ExtResource("3_ehl54")]

[node name="RayCast3D" type="RayCast3D" parent="SpringArm3D/CameraHolder/Camera3D"]
visible = false
target_position = Vector3(0, 0, -10)
collision_mask = 9
collide_with_areas = true
debug_shape_thickness = 5

[node name="Start" type="Marker3D" parent="SpringArm3D/CameraHolder/Camera3D/RayCast3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="End" type="Marker3D" parent="SpringArm3D/CameraHolder/Camera3D/RayCast3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)

[node name="Damage" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 24

[node name="Collider" type="CollisionShape3D" parent="Damage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("1")

[node name="ModelHolder" type="Node3D" parent="."]

[node name="Model" parent="ModelHolder" instance=ExtResource("4_oyx1d")]

[node name="Body" type="Node3D" parent="ModelHolder/Model"]
transform = Transform3D(1, 0, 2.13163e-14, 0, 1, 0, -2.13163e-14, 0, 1, 3.24817e-15, 0.75, -3.71547e-08)

[node name="Head" type="Node3D" parent="ModelHolder/Model/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)

[node name="LeftWrist" type="Node3D" parent="ModelHolder/Model/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0, 0)

[node name="RightWrist" type="Node3D" parent="ModelHolder/Model/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0, 0)

[node name="Hand" type="Node3D" parent="ModelHolder/Model/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)

[node name="RightRing" parent="ModelHolder" instance=ExtResource("5_vfj7s")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.3, 0.75, 0)
visible = false

[node name="LeftRing" parent="ModelHolder" instance=ExtResource("5_vfj7s")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.3, 0.75, 0)
visible = false

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Reload" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="Damage" to="." method="_on_damage_area_entered"]
[connection signal="timeout" from="Reload" to="." method="_on_reload_timeout"]
